--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -70,8 +70,6 @@
     font-size: 1vw;
 }
 
-
-
 .loadfade {
 
     -webkit-animation: fadein 3s; /* Safari, Chrome and Opera > 12.1 */
@@ -79,6 +77,22 @@
         -ms-animation: fadein 3s; /* Internet Explorer */
          -o-animation: fadein 3s; /* Opera < 12.1 */
             animation: fadein 3s;
+}
+
+#taskChart {
+    position:absolute;
+    font-size:1vw;
+    top:28%;
+    left:33%
+}
+
+@media (max-width: 991px) {
+    #taskChart {
+        position:absolute;
+        font-size:6vh;
+        top:30%;
+        left:31%
+    }
 }
 
 @keyframes fadein {
