--- a/css/style.css
+++ b/css/style.css
@@ -9013,6 +9013,13 @@ hr.transparent {
   top: 28%;
   left: 33%; }
 
+.quiz-label {
+  padding-top: 10px;
+  padding-right: 10px;
+  width: 10%;
+  text-align: right;
+  font-size: 16px; }
+
 @media (max-width: 991px) {
   #taskChart {
     position: absolute;
