--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -86,6 +86,14 @@
     left:33%
 }
 
+.quiz-label {
+    padding-top:10px;
+    padding-right:10px;
+    width:10%;
+    text-align:right;
+    font-size:16px
+}
+
 @media (max-width: 991px) {
     #taskChart {
         position:absolute;
