--- a/css/style.css
+++ b/css/style.css
@@ -9020,6 +9020,12 @@ hr.transparent {
   text-align: right;
   font-size: 16px; }
 
+.correct {
+  color: #03AD03; }
+
+.incorrect {
+  color: red; }
+
 @media (max-width: 991px) {
   #taskChart {
     position: absolute;
