--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -94,6 +94,13 @@
     font-size:16px
 }
 
+.correct {
+    color: #03AD03;
+}
+.incorrect {
+    color: red;
+}
+
 @media (max-width: 991px) {
     #taskChart {
         position:absolute;
